--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ if (typeof document.hidden !== "undefined") { // Opera 12.10 and Firefox 18 and 
 
 // Not gonna want this
 //var videoElement = document.getElementById("videoElement");
-var divElem = document.getElementByClassName("randomClass");
+var divElem = document.getElementsByClassName("randomClass");
 var countLeave = 0;
 //First occrance only occurance
 var aNode = divElem[0]
