--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ if (typeof document.addEventListener === "undefined" || hidden === undefined) {
   // Handle page visibility change   
   document.addEventListener(visibilityChange, handleVisibilityChange);
     
+/*Not needed
   // When the video pauses, set the title.
   // This shows the paused
   videoElement.addEventListener("pause", function(){
@@ -84,7 +85,7 @@ if (typeof document.addEventListener === "undefined" || hidden === undefined) {
   videoElement.addEventListener("play", function(){
     document.title = 'Playing'; 
   }, false);
-
+*/
 }
 </script>
 </body>
