--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     window.addEventListener( 'focus', function() { 
         countRet++;
         aNode2.textContent = ("Ret Page: " + countRet +"x"); } );
-        console.log( 'focus' ); } );
+        //console.log( 'focus' ); } );
 </script>
 
 <script>
