--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
     <div class="randomClass">focusOut Fired:</div>
     <div class="randomClass2">focusIn fired: </div>
     <div class="randomClass3">focusOut Fired:</div>
+    <div class="unloadEvent">unloaded: </div>
 
-
+<script>
+    var unloadCount = 0;
+    var unElement - document.getElementsByClassName("unloadEvent");
+    var uNode = unElement[0];
+    window.unload(function(){
+         unloadCount++;
+        uNode.textContent = ("Unloaded: " + unloadCount +"x");
+    }); 
+</script>
 
 <script>
     // Not gonna want this
