--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script>
     var unloadCount = 0;
-    var unElement - document.getElementsByClassName("unloadEvent");
+    var unElement = document.getElementsByClassName("unloadEvent");
     var uNode = unElement[0];
     window.unload(function(){
          unloadCount++;
