--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     function pageHidden(evt)
     {
-        var txt = "success"
+        var txt = "success";
         if(evt.persisted)
             console.log("page hide handler called. Page has been suspeneded.");
         // Hopefully this emits the post request im looking for.
@@ -49,12 +49,19 @@
     var aNode = divElem[0];
     var aNode2 = divElem2[0]; 
     window.addEventListener( 'blur', function() { 
+        var txt = "blur";
         countLeave++;
         aNode.textContent = ("Leave Page: " + countLeave +"x"); } );
+        $.post("demo_ajax_gethint.asp", {suggest: txt}, function(result){
+            $("span").html(result);
+        });
     window.addEventListener( 'focusout', function() { 
+        var txt = "focusOut";
         countRet++;
         aNode2.textContent = ("focus Out Page: " + countRet +"x"); } );
-        //console.log( 'focus' ); } );
+        $.post("demo_ajax_gethint.asp", {suggest: txt}, function(result){
+            $("span").html(result);
+        });    
 </script>
 
 <script>
