--- a/index.html
+++ b/index.html
@@ -61,16 +61,12 @@
     var aNode2 = divElem2[0]; 
     window.addEventListener( 'blur', function() { 
         countLeave++;
-        aNode.textContent = ("Leave Page: " + countLeave +"x"); } );
-        $.post("demo_ajax_gethint.asp", {suggest: txt1}, function(result){
-            $("span").html(result);
-        });
+        aNode.textContent = ("Leave Page: " + countLeave +"x"); 
+    } );
     window.addEventListener( 'focusout', function() { 
         countRet++;
-        aNode2.textContent = ("focus Out Page: " + countRet +"x"); } );
-        $.post("demo_ajax_gethint.asp", {suggest: txt2}, function(result){
-            $("span").html(result);
-        });    
+        aNode2.textContent = ("focus Out Page: " + countRet +"x"); 
+    } );   
 </script>
 
 <script>
