--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     //First occrance only occurance
     var aNode = divElem[0];
     var aNode2 = divElem2[0]; 
-    document.addEventListener( 'blur', function() { 
+    window.addEventListener( 'blur', function() { 
         countLeave++;
         aNode.textContent = ("Leave Page: " + countLeave +"x"); 
     } );
-    document.addEventListener( 'focusout', function() { 
+    window.addEventListener( 'focusout', function() { 
         countRet++;
         aNode2.textContent = ("focus Out Page: " + countRet +"x"); 
     } );   
